rearranged projects and edited text - added z-index to mobile nav manu and overlay to fix visual bugs

--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -6,6 +6,7 @@ nav {
         height: 0;
         width: 100%;
         background-color: transparent;
+        z-index: 1;
     }
 
     .nav-menu {
@@ -22,6 +23,7 @@ nav {
         transition: all 0.4s ease-in;
         transform: scaleY(0) scaleX(0);
         transform-origin: 100% 100% 0;
+        z-index: 2;
 
         a {
             padding: 10px 20px;
